--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
       "default_icon": "img/icon.png"      
     },    
     "author":"Selçuk Öztürk <mustafasozturk@gmail.com>",    
-    "homepage_url": "https://github.com/c1982/0wiki",
+    "homepage_url": "https://github.com/selcukXIII/0imgur",
     "permissions": [            
       "webRequest",
       "webRequestBlocking",      
